--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "npm run tests"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/usabilla/usabilla.modules"
+    "type": "git",
+    "url": "https://github.com/usabilla/usabilla.modules"
   },
   "author": "Spyros Ioakeimidis",
   "license": "MIT",
@@ -25,7 +25,9 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.4.0",
     "gulp-util": "^3.0.6",
-    "gulp-webserver": "^0.9.1"
+    "gulp-webserver": "^0.9.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "angular": "^1.4.5"
