--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Usabilla module library",
   "main": "src/module.js",
   "scripts": {
-    "test": "npm run tests"
+    "test": "./node_modules/.bin/karma start"
   },
   "repository": {
     "type": "git",
@@ -14,18 +14,28 @@
   "license": "MIT",
   "devDependencies": {
     "add-stream": "^1.0.0",
+    "angular-mocks": "^1.4.5",
     "browserify": "^11.0.1",
     "del": "^2.0.1",
     "gulp": "^3.9.0",
     "gulp-angular-templatecache": "^1.7.0",
     "gulp-concat": "^2.6.0",
     "gulp-eslint": "^1.0.0",
+    "gulp-jasmine": "^2.0.1",
     "gulp-minify-html": "^1.0.4",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.4.0",
     "gulp-util": "^3.0.6",
     "gulp-webserver": "^0.9.1",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.9",
+    "karma-browserify": "^4.3.0",
+    "karma-jasmine": "^0.3.6",
+    "karma-ng-html2js-preprocessor": "^0.1.2",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-spec-reporter": "0.0.20",
+    "phantomjs": "^1.9.18",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
