--- a/.editorconfig
+++ b/.editorconfig
@@ -14,6 +14,10 @@ insert_final_newline = true
 indent_style = space
 indent_size = 2
 
+[*.{css,scss}]
+indent_style = space
+indent_size = 2
+
 [*.md]
 trim_trailing_whitespace = false
 
