--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-minify-html": "^1.0.4",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-ruby-sass": "^1.4.0",
+    "gulp-scss-lint": "^0.3.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.4.0",
     "gulp-util": "^3.0.6",
