Renamed module to usabilla.components

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "usabilla.modules",
+  "name": "usabilla.components",
   "version": "1.0.0",
-  "description": "Usabilla module library",
+  "description": "Usabilla component library",
   "main": "src/module.js",
   "scripts": {
     "test": "./node_modules/.bin/karma start"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/usabilla/usabilla.modules"
+    "url": "https://github.com/usabilla/usabilla.components"
   },
   "author": "Spyros Ioakeimidis",
   "license": "MIT",
