--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "angular-mocks": "^1.4.5",
     "browserify": "^11.0.1",
     "del": "^2.0.1",
+    "event-stream": "^3.3.1",
+    "glob": "^5.0.14",
     "gulp": "^3.9.0",
     "gulp-angular-templatecache": "^1.7.0",
     "gulp-autoprefixer": "^3.0.1",
@@ -26,6 +28,7 @@
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.4",
     "gulp-ng-annotate": "^1.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^1.4.0",
     "gulp-scss-lint": "^0.3.0",
     "gulp-sourcemaps": "^1.5.2",
