--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Usabilla component library",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/karma start"
+    "test": "./node_modules/.bin/karma start",
+    "serve": "gulp serve",
+    "build": "gulp --production",
+    "start": "gulp"
   },
   "repository": {
     "type": "git",
@@ -18,12 +21,12 @@
     "browserify": "^11.0.1",
     "del": "^2.0.1",
     "event-stream": "^3.3.1",
-    "glob": "^5.0.14",
     "gulp": "^3.9.0",
     "gulp-angular-templatecache": "^1.7.0",
     "gulp-autoprefixer": "^3.0.1",
     "gulp-concat": "^2.6.0",
     "gulp-eslint": "^1.0.0",
+    "gulp-if": "^1.2.5",
     "gulp-jasmine": "^2.0.1",
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.4",
@@ -44,7 +47,8 @@
     "karma-spec-reporter": "0.0.20",
     "phantomjs": "^1.9.18",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "yargs": "^3.24.0"
   },
   "dependencies": {
     "angular": "^1.4.5"
