--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^1.4.0",
     "gulp-scss-lint": "^0.3.0",
+    "gulp-size": "^2.0.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.4.0",
     "gulp-util": "^3.0.6",
